[package]
name = "NVT"
version = "0.8.7"
edition = "2024"


[dependencies]
gtfs-rt = "0.5.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.104"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
futures = "0.3"
anyhow = "1.0.88"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.4.7", features = ["derive"] }
dotenvy = "0.15.6"
geojson = "0.24.2"
geo = "0.31.0"
uuid = { version = "1", features = ["serde", "v4"] }
lazy_static = "1.4.0"
tokio-stream = "0.1"
regex = "1.11.0"
geo-types = "0.7.17"
prost = "0.11.9"
csv = "1.4.0"
zip = "0.6"
tempfile = "3.0"
dirs = "6.0.0"
libc = "0.2.177"

# GUI dependencies
eframe = "0.28"
egui = "0.28"
egui_extras = { version = "0.28", features = ["default"] }
poll-promise = "0.3"
